--- a/ANGULAR_buku/angular.json
+++ b/ANGULAR_buku/angular.json
@@ -3,9 +3,19 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "FrontEnd_ANGULAR1": {
+    "prjbuku": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "standalone": false
+        },
+        "@schematics/angular:directive": {
+          "standalone": false
+        },
+        "@schematics/angular:pipe": {
+          "standalone": false
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/front-end-angular1",
+            "outputPath": "dist/prjbuku",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -64,10 +74,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "FrontEnd_ANGULAR1:build:production"
+              "buildTarget": "prjbuku:build:production"
             },
             "development": {
-              "buildTarget": "FrontEnd_ANGULAR1:build:development"
+              "buildTarget": "prjbuku:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -97,5 +107,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
