--- a/ANGULAR_buku/angular.json
+++ b/ANGULAR_buku/angular.json
@@ -3,19 +3,9 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "prjbuku": {
+    "prjfrontend": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "standalone": false
-        },
-        "@schematics/angular:directive": {
-          "standalone": false
-        },
-        "@schematics/angular:pipe": {
-          "standalone": false
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -23,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/prjbuku",
+            "outputPath": "dist/prjfrontend",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -74,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "prjbuku:build:production"
+              "buildTarget": "prjfrontend:build:production"
             },
             "development": {
-              "buildTarget": "prjbuku:build:development"
+              "buildTarget": "prjfrontend:build:development"
             }
           },
           "defaultConfiguration": "development"
