--- a/ANGULAR_buku/package.json
+++ b/ANGULAR_buku/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prjbuku",
+  "name": "prjfrontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:prjbuku": "node dist/prjbuku/server/server.mjs"
+    "serve:ssr:prjfrontend": "node dist/prjfrontend/server/server.mjs"
   },
   "private": true,
   "dependencies": {
